<package>
  <name>katana_description</name>
  <version>1.0.0</version>
  <description>This package contains an URDF description of the Katana arm and all supporting mesh files.</description>
  <maintainer email="mguenthe@uni-osnabrueck.de">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/katana_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>urdf</build_depend>
  <build_depend>convex_decomposition</build_depend>
  <build_depend>ivcon</build_depend>
  <build_depend>transmission_interface</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>urdf</run_depend>
  <run_depend>convex_decomposition</run_depend>
  <run_depend>ivcon</run_depend>
  <run_depend>transmission_interface</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>convex_decomposition</test_depend> -->
  <!-- <test_depend>ivcon</test_depend> -->
  <!-- <test_depend>transmission_interface</test_depend> -->

</package>
