<package>
  <name>katana_ikfast_kinematics_plugin</name>
  <version>1.0.0</version>
  <description>katana_ikfast_kinematics_plugin</description>
  <maintainer email="">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/katana_ikfast_kinematics_plugin</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>kinematics_base</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>pluginlib</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>kinematics_base</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>pluginlib</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>kinematics_base</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>tf_conversions</test_depend> -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->

<export>
    <kinematics_base plugin="${prefix}/kinematics_plugins.xml"/>
</export>

</package>