<package>
  <name>katana_msgs</name>
  <version>1.0.0</version>
  <description>This package contains messages specific to the Neuronics Katana arm.</description>
  <maintainer email="">Martin Guenther</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/katana_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->

</package>