<package>
  <name>katana_teleop</name>
  <version>1.0.0</version>
  <description></description>
  <maintainer email="">Henning Deeken</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/katana_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Henning Deeken</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>katana_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>object_manipulation_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>katana_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>object_manipulation_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>katana_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>kinematics_msgs</test_depend> -->
  <!-- <test_depend>object_manipulation_msgs</test_depend> -->

</package>