<package>
  <name>katana_trajectory_filter</name>
  <version>1.0.0</version>
  <description></description>
  <maintainer email="">Martin Guenther</maintainer>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/katana_trajectory_filter</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Martin Guenther</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>filters</build_depend>
  <build_depend>spline_smoother</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>spline_smoother</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>filters</test_depend> -->
  <!-- <test_depend>spline_smoother</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lkatana_trajectory_filter" cflags="-I${prefix}/include"/>
    <filters plugin="${prefix}/default_plugins.xml"/>
</export>

</package>